--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: rgb(70, 4, 50) Coloque a cor de preferência no fundo da pág web;
+    background-color: rgba(228, 127, 248, 0.671) Coloque a cor de preferência no fundo da pág web;
     color: rgb(223, 160, 223) cor da letra do corpo da página
 }
 
