--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
-    background-color: rgba(228, 127, 248, 0.671) Coloque a cor de preferência no fundo da pág web;
-    color: rgb(223, 160, 223) cor da letra do corpo da página
+    background-color: rgba(212, 0, 255, 0.719) Coloque a cor de preferência no fundo da pág web;
+    color: rgba(236, 113, 236, 0.842) cor da letra do corpo da página
 }
 
 
