--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
 body{
-    background-color: rgba(212, 0, 255, 0.719) Coloque a cor de preferência no fundo da pág web;
-    color: rgba(236, 113, 236, 0.842) cor da letra do corpo da página
+        color: PINK;
+        background: whitesmoke;
+    }
 }
 
 
