--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body{
         color:plum;
         background: whitesmoke;
     }
+
+    
     header {
-        border: solid 2px pink;
+        border: solid 2px red;
     }
 }
 
