--- a/style.css
+++ b/style.css
@@ -29,8 +29,12 @@ overflow-x:auto;
 gap: 20px;
 }
 header {
-    border-bottom: solid 2px rgb(228, 42, 129);
+    border-bottom: solid 2px rgb(230, 98, 186);
+    padding: 20px;
+}
+header {
+    border-bottom: solid 2px rgb(230, 43, 183);
     padding: 20px;
     font-size: 32px;
-    color: rgb(228, 42, 129);
+    color: rgb(230, 43, 183);
 }
